[gd_scene load_steps=3 format=3 uid="uid://41utugh005vo"]

[ext_resource type="Script" path="res://Source/GUI/Settings.gd" id="1_3k87k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_teqda"]
bg_color = Color(0, 0, 0, 0.670588)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3k87k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 100

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_teqda")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Render Distance"

[node name="RenderDistanceSlider" type="HSlider" parent="MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
min_value = 4.0
max_value = 64.0
value = 4.0

[node name="RenderDistance" type="Label" parent="MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
text = "BACK"

[node name="Save" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_mode = 0
text = "SAVE"

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="MarginContainer/Panel/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/RenderDistanceSlider" to="." method="_on_render_distance_slider_value_changed"]
[connection signal="button_down" from="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer/Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer/Save" to="." method="_on_save_button_down"]
